tests/errors/sem11.kt
fun main() {
    foo(); // not defined
}